[project]
name = "langsmith-mcp"
version = "1.0.0"
description = "MCP server for Langsmith SDK integration"
license = {text = "MIT"}
readme = "README.md"
authors = [
    { name = "Marco Perini", email = "marco@langchain.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "langsmith",
    "langchain-core>=0.3.56",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/langchain-ai/langsmith-mcp"
"Bug Tracker" = "https://github.com/langchain-ai/langsmith-mcp/issues"

[project.scripts]
langsmith-mcp = "langsmith_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_mcp"]

[tool.hatch.build]
only-packages = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 
